# personal-brand-ai-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agent/: __init__.py  controller.py  intent.py  memory.py  prompts.py  retrieval.py  schemas.py  tools.py
data/: summary.txt
